compiler/tests/template/fail/length_inference_failed2.jazz
fn f{k,l}(reg ptr u64[k] r) -> reg u64 {
  reg u64 res = r[0];
  return res;
}

param int N = 5;

export fn main () -> reg u64 {
  stack u64[N] s;
  inline int i;
  for i = 0 to N {
    s[i] = i;
  }
  reg u64 res = f(s); // the length args of f cannot be inferred, no info on [l]
  return res;
}
